// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <IconArrowSvg /> component Test <IconArrowSvg /> with props should correct render component with props 1`] = `
<div
  className="container testContainer top"
>
  <svg
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 512 512"
  >
    <path
      className="testPath"
      d="M352 128.4L319.7 96 160 256l159.7 160 32.3-32.4L224.7 256z"
    />
  </svg>
</div>
`;

exports[`Test <IconArrowSvg /> component Test <IconArrowSvg /> without props should correct render component without props 1`] = `
<div
  className="container svgContainer left"
>
  <svg
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 512 512"
  >
    <path
      className="path"
      d="M352 128.4L319.7 96 160 256l159.7 160 32.3-32.4L224.7 256z"
    />
  </svg>
</div>
`;
